--- a/src/Component/AChat.css
+++ b/src/Component/AChat.css
@@ -15,6 +15,13 @@
         margin: 0;
         padding: 15px;
      }
+     
+}
+@media (max-width:450px) {
+    .Achat{
+width: 100%;
+
+    }
 }
 
 
